--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,7 @@
 sources:
+  idxlayout.doc.r25821.tar.xz: 8007bc67a0735e1b8b954a70feb496a0926bc0ed
   idxlayout.doc.tar.xz: 567e22683d7ba211d2827835169e90231ff1ed12
+  idxlayout.r25821.tar.xz: 6cf824c1d284b9bc0d4fabe685bd5f3d9c622fc5
+  idxlayout.source.r25821.tar.xz: 27185c25ad0def0daf533e3052d3f69009f7ccec
   idxlayout.source.tar.xz: c14cbc975d08453450ced5b9f035df958bab0700
   idxlayout.tar.xz: f3a1c278d809763fc0875d2ee464f364d7a0aa0e
